# clarity

./: .gitignore  README.md  clarity.py  mypy.ini  pyproject.toml
clarity/: console.py  debounce.py  format.py  fs.py  parse.py  visualize.py
