[tool.poetry]
name = "clarity"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pydantic = "^2.7.4"
matplotlib = "^3.9.0"
requests = "^2.32.3"
nicegui = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pandas-stubs = "^2.2.2.240603"
ruff = "^0.4.10"
types-requests = "^2.32.0.20240712"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
